# vi

./: README.mdn  settings.gradle.kts
android/: aar.gradle  apk-checker-config.json  apm_config.gradle  build.gradle.kts  gradle.properties  key.jks  settings.gradle.kts  traceFilter.txt  used-apis.txt
android/apk/: README.md
android/apk/matrix-apk-canary/: build.gradle
android/apk/matrix-arscutil/: build.gradle
android/apk/matrix-commons/: build.gradle
android/apk/vi-apk-commons/: build.gradle.kts
android/apk/vi-apksize-lint/: build.gradle.kts
android/apk/vi-lint-rules/: build.gradle
android/apk/vi-linter-apksize/: build.gradle.kts
android/apk/vi-monitor-matrix-apkchecker/: build.gradle.kts
android/app/: build.gradle.kts
android/battery/: README.md
android/composite-builds/: aar.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
android/cpu-tracer/: README.md  config.pbtx  record_android_trace
android/cpu-tracer/btrace/: settings.gradle.kts
android/cpu-tracer/btrace/rhea-core/src/main/cpp/utils/: CMakeLists.txt
android/gradle/: libs.versions.toml
android/memory/: README.md
android/stability/: anylase_anr.py  sort_thread_cpu_duration.py
android/startup/: README.md  START_README.md  stat_startup.py
android/vi-api/: build.gradle
android/vi-lint-rules/: build.gradle
dashboard4js/config/: config.ts  defaultSettings.ts  oneapi.json  proxy.ts  routes.ts
dashboard4js/mock/: notices.ts  user.ts
dashboard4js/src/: app.tsx  global.less  global.tsx  requestErrorConfig.ts
server/: build.gradle.kts
server4py/: Pipfile
(+294 files in other folders)
